@@ -1,3 +1,9 @@
+2001-09-19  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* Makefile.am (dist-hook): Include INSTALL-WIN32.txt in the list
+	of files to convert to MSDOS line endings.
+	(snapshot): Use ISO-8601 compliant date for filename.
+
 2001-09-18  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* include/cppunit/TextTestResult.h: Change include from <iosfwd>
